manifests/couchdb/couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  ports:
  - port: 5984
  selector:
    app: couchdb
