manifests/couchdb/couchdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: couchdb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: couchdb
            port:
              number: 5984
